// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilesListingForm/> empty files custom msg 1`] = `
<div>
  <div
    class="row bottom-padding"
  >
    <div
      class="col-md-7"
    />
    <div
      class="col-md-5"
    />
  </div>
  <div>
    the file list is empty
  </div>
</div>
`;

exports[`<FilesListingForm/> empty files default props 1`] = `
<div>
  <div
    class="row bottom-padding"
  >
    <div
      class="col-md-7"
    />
    <div
      class="col-md-5"
    />
  </div>
</div>
`;

exports[`<FilesListingForm/> with editable and noReadOnlyFilesMessage 1`] = `
<div>
  <div
    class="row bottom-padding"
  >
    <div
      class="col-md-7"
    >
      <button
        class="btn btn-primary"
        title="more files"
        type="button"
      >
        more files
      </button>
    </div>
    <div
      class="col-md-5"
    >
      <div
        class="pull-right"
      >
        <button
          class="btn btn-default"
          disabled=""
          title="Download selected files"
          type="button"
        >
          <i
            class="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <hr />
  <div>
    No other files for you either!
  </div>
  <hr />
  <div>
    <div
      class="file-listing--header bottom-padding"
    >
      Your files
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="exam.xlsx"
              type="checkbox"
            />
            <i
              class="fa fa-file-excel-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="exam.xlsx"
              >
                <div
                  class="file-listing-filename"
                >
                  exam.xlsx
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-08 12:26:30.064
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm an excel file
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="xray.gif"
              type="checkbox"
            />
            <i
              class="fa fa-file-image-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="xray.gif"
              >
                <div
                  class="file-listing-filename"
                >
                  xray.gif
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Skywalker
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:47:51.931
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm gif
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="report.json"
              type="checkbox"
            />
            <i
              class="fa fa-file-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="report.json"
              >
                <div
                  class="file-listing-filename"
                >
                  report.json
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:48:11.472
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a json file
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilesListingForm/> with files custom props 1`] = `
<div>
  <div
    class="row bottom-padding"
  >
    <div
      class="col-md-7"
    >
      <button
        class="btn btn-primary"
        title="add more files"
        type="button"
      >
        add more files
      </button>
    </div>
    <div
      class="col-md-5"
    >
      <div
        class="pull-right"
      >
        <button
          class="btn btn-default"
          disabled=""
          title="Download selected files"
          type="button"
        >
          <i
            class="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="exam.xlsx"
              type="checkbox"
            />
            <i
              class="fa fa-file-excel-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="exam.xlsx"
              >
                <div
                  class="file-listing-filename"
                >
                  exam.xlsx
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-08 12:26:30.064
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm an excel file
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="xray.gif"
              type="checkbox"
            />
            <i
              class="fa fa-file-image-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="xray.gif"
              >
                <div
                  class="file-listing-filename"
                >
                  xray.gif
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Skywalker
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:47:51.931
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm gif
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="report.json"
              type="checkbox"
            />
            <i
              class="fa fa-file-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="report.json"
              >
                <div
                  class="file-listing-filename"
                >
                  report.json
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:48:11.472
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a json file
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilesListingForm/> with files default props 1`] = `
<div>
  <div
    class="row bottom-padding"
  >
    <div
      class="col-md-7"
    />
    <div
      class="col-md-5"
    >
      <div
        class="pull-right"
      >
        <button
          class="btn btn-default"
          disabled=""
          title="Download selected files"
          type="button"
        >
          <i
            class="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="exam.xlsx"
              type="checkbox"
            />
            <i
              class="fa fa-file-excel-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="exam.xlsx"
              >
                <div
                  class="file-listing-filename"
                >
                  exam.xlsx
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-08 12:26:30.064
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm an excel file
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="xray.gif"
              type="checkbox"
            />
            <i
              class="fa fa-file-image-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="xray.gif"
              >
                <div
                  class="file-listing-filename"
                >
                  xray.gif
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Skywalker
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:47:51.931
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm gif
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="report.json"
              type="checkbox"
            />
            <i
              class="fa fa-file-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="report.json"
              >
                <div
                  class="file-listing-filename"
                >
                  report.json
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:48:11.472
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a json file
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilesListingForm/> with no files and both messages 1`] = `
<div>
  <div
    class="row bottom-padding"
  >
    <div
      class="col-md-7"
    >
      <button
        class="btn btn-primary"
        title="more files"
        type="button"
      >
        more files
      </button>
    </div>
    <div
      class="col-md-5"
    />
  </div>
  <div>
    No other files for you either!
  </div>
  <div>
    No files for you!
  </div>
</div>
`;

exports[`<FilesListingForm/> with only readOnly files 1`] = `
<div>
  <div
    class="row bottom-padding"
  >
    <div
      class="col-md-7"
    />
    <div
      class="col-md-5"
    >
      <div
        class="pull-right"
      >
        <button
          class="btn btn-default"
          disabled=""
          title="Download selected files"
          type="button"
        >
          <i
            class="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      class="file-listing--header bottom-padding"
    >
      Read-only files
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="exam.xlsx"
              type="checkbox"
            />
            <i
              class="fa fa-file-excel-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="exam.xlsx"
              >
                <div
                  class="file-listing-filename"
                >
                  exam.xlsx
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-08 12:26:30.064
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm an excel file
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="xray.gif"
              type="checkbox"
            />
            <i
              class="fa fa-file-image-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="xray.gif"
              >
                <div
                  class="file-listing-filename"
                >
                  xray.gif
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Skywalker
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:47:51.931
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm gif
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="report.json"
              type="checkbox"
            />
            <i
              class="fa fa-file-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="report.json"
              >
                <div
                  class="file-listing-filename"
                >
                  report.json
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:48:11.472
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a json file
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilesListingForm/> with readOnly and editable files 1`] = `
<div>
  <div
    class="row bottom-padding"
  >
    <div
      class="col-md-7"
    >
      <button
        class="btn btn-primary"
        title="more files"
        type="button"
      >
        more files
      </button>
    </div>
    <div
      class="col-md-5"
    >
      <div
        class="pull-right"
      >
        <button
          class="btn btn-default"
          disabled=""
          title="Download selected files"
          type="button"
        >
          <i
            class="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <hr />
  <div>
    <div
      class="file-listing--header bottom-padding"
    >
      Other files you can't remove
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="second.xlsx"
              type="checkbox"
            />
            <i
              class="fa fa-file-excel-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="second.xlsx"
              >
                <div
                  class="file-listing-filename"
                >
                  second.xlsx
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Someone
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-08 12:26:30.064
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a second excel file
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="pretty.gif"
              type="checkbox"
            />
            <i
              class="fa fa-file-image-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="pretty.gif"
              >
                <div
                  class="file-listing-filename"
                >
                  pretty.gif
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Skywalker
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:47:51.931
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a pretty gif
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
  </div>
  <hr />
  <div>
    <div
      class="file-listing--header bottom-padding"
    >
      Your files
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="exam.xlsx"
              type="checkbox"
            />
            <i
              class="fa fa-file-excel-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="exam.xlsx"
              >
                <div
                  class="file-listing-filename"
                >
                  exam.xlsx
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-08 12:26:30.064
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm an excel file
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="xray.gif"
              type="checkbox"
            />
            <i
              class="fa fa-file-image-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="xray.gif"
              >
                <div
                  class="file-listing-filename"
                >
                  xray.gif
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Skywalker
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:47:51.931
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm gif
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="report.json"
              type="checkbox"
            />
            <i
              class="fa fa-file-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="report.json"
              >
                <div
                  class="file-listing-filename"
                >
                  report.json
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:48:11.472
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a json file
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilesListingForm/> with readOnly and noFilesMessage 1`] = `
<div>
  <div
    class="row bottom-padding"
  >
    <div
      class="col-md-7"
    >
      <button
        class="btn btn-primary"
        title="more files"
        type="button"
      >
        more files
      </button>
    </div>
    <div
      class="col-md-5"
    >
      <div
        class="pull-right"
      >
        <button
          class="btn btn-default"
          disabled=""
          title="Download selected files"
          type="button"
        >
          <i
            class="fa fa-download"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      class="file-listing--header bottom-padding"
    >
      Other files you can't remove
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="second.xlsx"
              type="checkbox"
            />
            <i
              class="fa fa-file-excel-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="second.xlsx"
              >
                <div
                  class="file-listing-filename"
                >
                  second.xlsx
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Someone
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-08 12:26:30.064
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a second excel file
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="pretty.gif"
              type="checkbox"
            />
            <i
              class="fa fa-file-image-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="pretty.gif"
              >
                <div
                  class="file-listing-filename"
                >
                  pretty.gif
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Skywalker
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:47:51.931
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a pretty gif
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    No files for you!
  </div>
</div>
`;
